[package]
name = "task"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"
dotenv = "0.15.0"
textwrap = "0.16.2"